[Bug 956958] Use new question filtering on mobile.

--- a/kitsune/sumo/static/less/mobile/questions.less
+++ b/kitsune/sumo/static/less/mobile/questions.less
@@ -263,15 +263,24 @@
     padding: 10px 16px;
   }
 
-  .pulldown-menu {
-    .select-box {
-      margin-right: 15px;
-      width: calc(~'33.33% - 40px');
-      width: -moz-calc(~'33.33% - 40px');
-      width: -webkit-calc(~'33.33% - 40px');
+  #question-filters {
+    color: #888;
 
-      &:last-of-type {
-        margin: 0;
+    .cf {
+      display: flex;
+
+      a {
+        font-size: 0.8em;
+        margin-right: 5px;
+        opacity: 0.7;
+
+        &:last-of-type {
+          margin-right: 0;
+        }
+
+        &.selected {
+          opacity: 1.0;
+        }
       }
     }
   }
